--- a/careportsapp-ui/src/app/components/release-item/release-item.component.html
+++ b/careportsapp-ui/src/app/components/release-item/release-item.component.html
@@ -161,7 +161,7 @@
                                                 
                         <td>{{ releaseObj.prdRfcNumber }}</td> 
                         <td>{{ releaseObj.prdReleaseDate }} </td> 
-                        <td><a href="#releasemodal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg devitem-edit-item-button" (click)="getUpdateItem(releaseObj.releaseId)"></i></a>&nbsp;<a href="#devmodalview" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-cog fa-lg devitem-report-edit-item-button" (click)="getReportUpdateItem(releaseObj.releaseId)"></i></a>&nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(releaseObj.releaseId)"></i></a></td>
+                        <td><a href="#releasemodal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg devitem-edit-item-button" (click)="getUpdateItem(releaseObj.releaseId)"></i></a>&nbsp;<a href="#devmodalview" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-cog fa-lg devitem-report-edit-item-button" (click)="getReportUpdateItem(releaseObj.releaseId)"></i></a>&nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveReleaseItem(releaseObj.releaseId)"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
