--- a/careportsapp-ui/src/app/components/task-scheduler/task-scheduler.component.html
+++ b/careportsapp-ui/src/app/components/task-scheduler/task-scheduler.component.html
@@ -42,26 +42,30 @@
                     <thead>
                       <tr>
                         <th width="5%" class="th-sortable" data-toggle="class">ID</th>
-                        <th width="10%">Task</th>
-                        <th width="30%">Description</th>
-                        <th width="8%">Priority</th>                        
+                        <th width="40%">Task</th>
+                        <!-- <th width="10%">Description</th> -->
+                        <th width="5%">Priority</th>                        
                         <th width="8%">Follow Up</th>
-                        <th width="8%">Status</th>
-                        <th width="8%">Scheduled</th>
+                        <th width="5%">Status</th>
+                        <th width="5%">Scheduled</th>
                         <th width="5%"><span class="label pull-right">
-                      <a href="#releasemodal" data-toggle="modal" class="btn btn-xs btn-success add-dev-item-button" data-backdrop="static" data-keyboard="false" (click)="addItemModalOpen()"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
+                      <a href="#releasemodal" data-toggle="modal" class="btn btn-xs btn-success add-dev-item-button" data-backdrop="static" data-keyboard="false" (click)="addNewTaskBtnClk()"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
                     </span></th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let taskSchedulerObj of taskSchedulerObjList | paginate: config" [ngClass]="getColorClass(taskSchedulerObj.taskStatus)">
                         <td>{{ taskSchedulerObj.taskSchedulerId }}</td>
-                        <td>{{ taskSchedulerObj.taskName }}</td>
-                        <td><span *ngIf="taskSchedulerObj.taskDescription!=null && taskSchedulerObj.taskDescription.length<=50;else subsubject">{{ taskSchedulerObj.taskDescription }}</span>
+                        <td><span *ngIf="taskSchedulerObj.taskName!=null && taskSchedulerObj.taskName.length<=100;else subsubject">{{ taskSchedulerObj.taskName }}</span>
                           <ng-template #subsubject>
-                            {{ taskSchedulerObj.taskDescription | slice:0:50 }} ....taskSchedulerObj
+                            {{ taskSchedulerObj.taskName | slice:0:100 }} ....
                           </ng-template>
                         </td>
+                        <!-- <td><span *ngIf="taskSchedulerObj.taskDescription!=null && taskSchedulerObj.taskDescription.length<=50;else subsubject">{{ taskSchedulerObj.taskDescription }}</span>
+                          <ng-template #subsubject>
+                            {{ taskSchedulerObj.taskDescription | slice:0:50 }} ....
+                          </ng-template>
+                        </td> -->
                         <td>{{ taskSchedulerObj.priority }}</td>
                         <td>{{ taskSchedulerObj.followUpTo }}</td>
                         <td>{{ taskSchedulerObj.taskStatus }}</td>
@@ -77,7 +81,7 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="addItemModalClose()">&times;</button>
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" >&times;</button>
                   <h4 class="modal-title">Add New Task</h4>
                 </div>
 
@@ -86,13 +90,12 @@
                     <div class="col-sm-12">
                       <input type="hidden" class="form-control"  formControlName="task_scheduler_id">
                         
-                        <div class="col-sm-6" >
+                        
                         <div class="form-group">
                           <label for="exampleSelect1">Task</label>
                           <input type="text" name="task_name" formControlName="task_name" class="form-control" placeholder="Task">
                         </div>
-                      </div>
-                        <div class="col-sm-3" >
+                        <div class="col-sm-6" >
                         <div class="form-group">
                           <label for="exampleSelect1">Priority</label>
                            <select name="task_priority" formControlName="task_priority" class="form-control" >
@@ -102,7 +105,7 @@
                           </select>
                         </div>
                       </div>
-                      <div class="col-sm-3" >
+                      <div class="col-sm-6" >
                         <div class="form-group">
                           <label for="exampleSelect1">Status</label> 
                           <select name="task_status" formControlName="task_status" class="form-control" >
@@ -140,7 +143,7 @@
                 </div>
               </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-white" data-dismiss="modal" (click)="addItemModalClose()" >Close</button>
+                  <button type="button" class="btn btn-white" data-dismiss="modal" >Close</button>
                   <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button>
                 </div>
               </div>
